--- a/stylesheets/style2.css
+++ b/stylesheets/style2.css
@@ -2,7 +2,8 @@ body {
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: 5w 30vw 5vw;
-    grid-gap: 1em;
+    grid-gap: 2em;
+    font-family: 'Lato', sans-serif;
   }
   
   header,
@@ -16,11 +17,7 @@ body {
     padding: 1em 0;
   }
   
-  header,
-  main,
-  aside,
-  footer {
-    background: #eaeaea;
+  header,main,aside,footer {
     text-align: justify;
 
   }
@@ -29,6 +26,7 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    max-height: 500px;
   }
 
   .header{
@@ -41,3 +39,70 @@ body {
     justify-content: space-between;
     padding: 0 180px;
   }
+
+  h3{
+      text-align: center;
+  }
+
+  img{
+      border: 1px solid black;
+  }
+
+  #back{
+      text-align: right;
+      font-size: 0.9em;
+      margin-right: 10px;
+      margin-bottom: 10px;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+    padding: 2px 2px;
+  }
+
+  a:hover{
+      color: darkblue;
+  }
+
+  p{
+      padding: 10px 10px;
+
+  }
+
+  button{
+      height: 25px;
+  }
+
+  h1{
+      text-transform: uppercase;
+      font-family: 'Bebas Neue', cursive;
+      letter-spacing: 7px;
+  }
+
+  aside{
+    border-top: black solid 1px;
+    border-bottom: black solid 1px;
+  }
+
+  hr.style-seven {
+    overflow: visible; /* For IE */
+    height: 30px;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px 0 0 0;
+    border-radius: 20px;
+}
+hr.style-seven:before { /* Not really supposed to work, but does */
+    display: block;
+    content: "";
+    height: 30px;
+    margin-top: -31px;
+    border-style: solid;
+    border-color: black;
+    border-width: 0 0 1px 0;
+    border-radius: 20px;
+}
+
+  
+  
