--- a/stylesheets/style1.css
+++ b/stylesheets/style1.css
@@ -16,6 +16,7 @@ body {
     padding: 60px 0px 35px 0; 
     text-align: center;
     color: rgb(36, 23, 7);
+    background-color: #d8d8c2;
 }
 
 p {
@@ -106,36 +107,6 @@ height:100%;
 
 body {
 margin:0;
-}
-
-.bg {
-animation:slide 3s ease-in-out infinite alternate;
-background-image: linear-gradient(-60deg, rgb(228, 233, 198) 50%, rgb(249, 254, 217) 50%);
-bottom:0;
-left:-50%;
-opacity:.5;
-position:fixed;
-right:-50%;
-top:0;
-z-index:-1;
-}
-
-.bg2 {
-animation-direction:alternate-reverse;
-animation-duration:4s;
-}
-
-.bg3 {
-animation-duration:5s;
-}
-
-@keyframes slide {
-0% {
-    transform:translateX(-25%);
-}
-100% {
-    transform:translateX(25%);
-}
 }
 
 section{
