--- a/stylesheets/style2.css
+++ b/stylesheets/style2.css
@@ -1,10 +1,6 @@
 body {
-    display: grid;
-    grid-template-columns: 60% 40%;
-    grid-template-rows: 5w 30vw 5vw;
-    grid-gap: 2em;
-    font-family: 'Lato', sans-serif;
-  }
+
+}
   
   header,footer {
     grid-column: 1 / span 2;
@@ -14,11 +10,12 @@ body {
     margin: 0 auto;
     max-width: 56em;
     padding: 1em 0;
+    font-family: 'Lato', sans-serif;
   }
   
   header,main,aside,footer {
     text-align: justify;
-
+    margin-bottom: 20px;
   }
 
   .img{
@@ -33,15 +30,11 @@ body {
       padding-bottom: 22px;
   }
 
-  .links{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 0px;
-  }
+
 
   h3{
       text-align: center;
+      margin-top: 0;
   }
 
   img{
@@ -68,13 +61,14 @@ body {
   }
 
   p{
-      padding: 10px 10px;
+      padding: 5px 5px;
 
   }
 
   button{
       height: 26px;
-      width: 300px;
+      width: 200px;
+      padding: 0 0;
   }
 
   h1{
@@ -87,9 +81,11 @@ body {
       
 
   aside{
-    border-top: black solid 1px;
-    border-bottom: black solid 1px;
+
     background-color: rgba(255,255,255,0.3);
+    padding: 10px 10px;
+    margin-left: 10px;
+    margin-bottom: 20px;
   }
 
   .bg {
@@ -136,5 +132,30 @@ body {
     }
   }
 
-  
-  
+  button a{
+    font-size: 1.2em
+  }
+
+  @media screen and (min-width: 960px){
+  .links{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0px;
+  }
+}
+
+  @media screen and (min-width: 720px){
+    body{
+      display: grid;
+      grid-template-columns: 60% 40%;
+      grid-template-rows: 5w 30vw 5vw;
+    }
+  }
+
+  @media screen and (min-width: 360px){
+    main{
+      margin-left: 10px;
+      margin-right: 10px;
+    };
+  }
