--- a/stylesheets/style2.css
+++ b/stylesheets/style2.css
@@ -50,7 +50,7 @@
     color: black;
     padding: 2px 2px;
     font-size: 1.1em;
-    font-weight: 450;
+    font-weight: 500;
   }
 
   a:hover{
@@ -155,4 +155,8 @@
       margin-left: 10px;
       margin-right: 10px;
     };
+  }
+
+  footer{
+    margin-left: 10px;
   }
