--- a/stylesheets/src-styles/_base.css
+++ b/stylesheets/src-styles/_base.css
@@ -1,10 +1,3 @@
-body {
-  margin: 0 auto;
-  max-width: 56em;
-  padding: 1em 0;
-  font-family: "Lato", sans-serif;
-}
-
 header,
 footer {
   grid-column: 1 / span 2;
@@ -15,6 +8,14 @@ main,
 aside,
 footer {
   text-align: justify;
+  margin-bottom: 20px;
+}
+
+body {
+  margin: 0 auto;
+  max-width: 56em;
+  padding: 1em 0;
+  font-family: "Lato", sans-serif;
 }
 
 aside {
