node installed and JSON added

--- a/stylesheets/src-styles/_base.css
+++ b/stylesheets/src-styles/_base.css
@@ -83,7 +83,7 @@ footer {
   margin-left: 10px;
 }
 
-#back-to-top {
+.back-to-top {
   text-align: center;
   font-size: 0.9em;
   margin-right: 10px;
